# cxx-qt-playground

./: .gitignore  CMakeLists.txt  Cargo.toml  build.rs
include/: demo.h
src/: anotherbridge.rs  cxxqt copy.rs  cxxqt.rs  demo.cpp  lib.rs  main.cpp  main.rs  myobject.cpp  myobject.h  mytrait.rs  qstring.rs  test  test.rs  traits.rs
