[package]
name = "playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cxx="1"
evdev="0.12"
signal-hook="0.3"
# cxx-qt="0.4"

#[lib]
#name = "rust"
#crate-type = ["staticlib"]

[build-dependencies]
#cxx-qt-build = "0.3"
cxx-build="1.0"
